tests/spec/fail/match_case_type_mismatch.aja
match 1:
    case "1":
        print("bad")
